<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/padding_content_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_content_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_content_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/padding_content_large" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_thumbnail,tv_title,tv_genre" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_freetogame,iv_bookmark,iv_game" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_publisher,tv_developer,tv_release_date, tv_platform" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="iv_thumbnail,tv_title,tv_genre,tv_publisher,tv_developer,tv_release_date,tv_platform,tv_description,panel_requirements,iv_freetogame,iv_bookmark,iv_game,vp_screenshots"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="@dimen/width_thumbnail"
            android:layout_height="@dimen/height_thumbnail"
            android:contentDescription="@string/text_accessibility_thumb"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="@id/content_top"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextMediumStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/iv_thumbnail"
            app:layout_constraintBottom_toTopOf="@id/tv_genre"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toTopOf="@id/iv_thumbnail"
            tools:text="Title" />

        <TextView
            android:id="@+id/tv_genre"
            style="@style/TextSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="Genre" />

        <ImageView
            android:id="@+id/iv_freetogame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@string/text_accessibility_freetogame"
            android:src="@drawable/ic_freetogame"
            app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/barrier_header" />

        <ImageView
            android:id="@+id/iv_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_accessibility_bookmark"
            android:src="@drawable/ic_not_bookmarked"
            app:layout_constraintEnd_toStartOf="@id/iv_game"
            app:layout_constraintStart_toEndOf="@id/iv_freetogame"
            app:layout_constraintTop_toTopOf="@id/iv_freetogame" />

        <ImageView
            android:id="@+id/iv_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_accessibility_game_url"
            android:src="@drawable/ic_web"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toEndOf="@id/iv_bookmark"
            app:layout_constraintTop_toTopOf="@id/iv_freetogame" />

        <TextView
            android:id="@+id/tv_publisher"
            style="@style/TextSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@id/tv_release_date"
            app:layout_constraintStart_toStartOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/barrier_icons"
            tools:text="Publisher" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/TextSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toEndOf="@id/tv_publisher"
            app:layout_constraintTop_toBottomOf="@id/barrier_icons"
            tools:text="22-06-2089" />

        <TextView
            android:id="@+id/tv_developer"
            style="@style/TextSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@id/tv_release_date"
            app:layout_constraintStart_toStartOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher"
            tools:text="Developer" />

        <TextView
            android:id="@+id/tv_platform"
            style="@style/TextSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toEndOf="@id/tv_publisher"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date"
            tools:text="Platform" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/barrier_details"
            tools:text="Description" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_screenshots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@id/panel_requirements"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <include
            android:id="@+id/panel_requirements"
            layout="@layout/panel_requirements"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/content_bottom"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/vp_screenshots" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_action_retry"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="@id/content_top"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>